# cryo

./: .gitignore  CMakeLists.txt  IO.ll  README.md  ast_debug.txt  build.sh  crashdump.txt  cryo.md  cryoconfig  cryoenv.sh  foo.c  foo.cpp  foo.ll  foocxx.cpp  foocxx.ll  init.sh  install.sh  issues.md  log  logger  logger.c  logs.md  main.cryo  makefile  note.md  notes.md  output.bc  output.ll  simple_module.ll  test.ll  testing.txt  trLengthA.ll  updates.md
_export/: cmd_build.c  cmd_devWatch.c  cmd_help.c  cmd_init.c  display.c  new_cli.c
assets/: cryo-lsp-0.0.10.vsix  cryo-lsp-0.0.12.vsix
backup/: parser.c
cli/: cli.c  commands.c  commands.h  compiler.c  compiler.h  helpmessages.c  helpmessages.h
cryo/: ast_debug.txt  c_support.c  cxx_support.cpp  runtime.cryo  support_lib.h  todo.md
cryo_env/: cryolib.cryo  example.cryo  main.cryo
cryolib/: todo.md
dbg_out/: main01.out
dev/: features-todo.md
docs/: cli.md  compiler-architecture.md  getting_started.md  grammar.md  lang-overview.md  langOverview.md  releaseNotes.md
examples/: array.cryo  binop.cryo  classes.cryo  fibonacci.cryo  loops.cryo  strings.cryo  structs.cryo
foo/: lexer.c  main.c  utils.c
include/: version.h
libs/: initLibs.sh
src/cpp/: CMakeLists.txt  codegen.cpp  compilation.cpp  compiler.cpp  cppmain.cpp  declarations.cpp  generator.cpp  main.cpp  output.txt  types.cpp
src/cpp/context/: cryoContext.cpp
src/cpp/dev_src/: codegen.cpp
src/cpp/include/: cppASTNode.h  cppcodegen.h
src/cpp/modules/: generation.cpp  schema.cpp
src/cpp/semantics/: arrays.cpp  binaryExpression.cpp  forloop.cpp  functions.cpp  ifstatement.cpp  imports.cpp  structs.cpp  variables.cpp  whileStatement.cpp
src/cpp/src/: ASTNode.cpp  CodeGen.cpp  codegen.cpp  conditionals.cpp  cppASTNode.cpp  cppCodeGen.cpp  cppLogger.cpp  foo.json  functions.cpp  lib.cpp  schema.cpp  structs.cpp  variables.cpp
src/cpp/syntax/: classes.cpp  expressions.cpp  functions.cpp  operations.cpp  schema.cpp  variables.cpp
src/cpp/types/: structs.cpp  types.cpp
src/cpp/utils/: backend_symtable.cpp  debugger.cpp
(+731 files in other folders)
